basics/6_requests_and_limits/client-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: client-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: client
  template:
    metadata:
      name: client-pod
      labels:
        app: client
    spec:
      containers:
        - name: client
          image: laithharb/web-app:v2 # QoS: BestEffort

---

apiVersion: v1
kind: Service
metadata:
  name: client-srv
spec:
  type: ClusterIP
  selector:
    app: client # Points to client-pod.yaml -> label
  ports:
    - port: 3000
      targetPort: 3000 # container exposed port
