basics/6_requests_and_limits/mongo-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mongo-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mongo
  template:
    metadata:
      name: mongo-pod
      labels:
        app: mongo
    spec:
      containers:
      - name: mongo
        image: mongo
        resources: # QoS: Guaranteed
          requests:
            memory: 200Mi
            cpu: 100m
          limits:
            memory: 200Mi
            cpu: 100m
        volumeMounts:
        - name: mongo-storage
          mountPath: /data/db
      volumes:
      - name: mongo-storage
        persistentVolumeClaim:
          claimName: mongo-pvc


---

apiVersion: v1
kind: Service
metadata:
  name: mongo-srv # This name is used by client to resolve IP using DNS service
spec:
  selector:
    app: mongo
  ports:
  - port: 27017
    targetPort: 27017
