basics/6_requests_and_limits/ingress-srv.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-service
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubenetes.io/use-regex: "true"
spec:
  rules:
  - host: habittracker.com
    http:
      paths:
      - pathType: ImplementationSpecific
        path: "/api/?(.*)"
        backend:
          service:
            name: server-srv
            port: 
              number: 3000
      - pathType: ImplementationSpecific
        path: "/?(.*)"
        backend:
          service:
            name: client-srv
            port: 
              number: 3000
